 * Fixed issue #3451: Turtle progress bar in process, but task is finish
 * Fixed issue #3450: Commit message after "Revert changes by these commits" suggests a single commit is reverted
 * Fixed issue #3461: Performing refresh on Commit window loses new branch name

== Features ==
 * Fixed issue #3448: Revision Graph: Make direction of arrows configurable

= Release 2.9.0 =
Released: 2019-10-31

== Changes ==
 * Support for Thesaurus was dropped
 * Thin-Pack option was dropped from fetch/pull dialog (enabled by default in Git)

== Features ==
 * Fixed issue #3355: Adding file name extension in the Export dialog
 * Update Scintilla to 4.2.0
 * Update libgit to 2.22.0 based on Git for Windows sources
 * Update TortoiseGitPLink to PuTTY PLink 0.73 (security fix, cf. https://www.chiark.greenend.org.uk/~sgtatham/putty/changes.html)
 * Update PuTTY binaries to 0.72
 * Allow to disable "Working Tree Changes" in log dialog (using advanced settings)
 * Update Hunspell to 1.7.0
 * Fixed issue #3363: Add option to show unlabeled most recent common ancestor between all branches in Revision Graph
   In the View menu you can now toggle the display of branchings and mergings.
   (This also fixes issue #2110: The Revision Graph is invalid if first commit does not contains the files)
 * Fixed issue #3379: Super-project-pointer should show in revision graph of submodule
 * Fixed issue #3421: Option to show Log IDs instead of SHA-1 in TortoiseGitBlame
 * Fixed issue #3343: Provide a confirm dialog instead of executing the revert operation directly
 * Ref Browse: Show date and author of annotated tag as well
 * Show whitespaces in patch views
 * Fixed issue #3414: Allow users to not display all tags on revision graph
 * Add find functionality to revision graph
 * Fixed issue #3427: FileDiffDlg: Provide a way to view the diff for a pull request branch (in diff options)
 * Fixed issue #3440: (GUI) Animation should stop when finished, not halt