@@ -143,3 +143,4 @@
 #define IDS_LOG_POPUP_CLIPBOARD_SUBJECTS 20126
 #define IDS_LOG_POPUP_CLIPBOARD_MSGS    20127
 #define IDS_LOG_POPUP_CLIPBOARD_TAGBRANCHES 20128
+#define IDS_LOG_POPUP_COMPARE_PARENT_WC     20129
